# fishbot-motion-driver

./: CMakeLists.txt  README.md
docs/boost/: test_udp_server.cpp
include/communicate/: communicate.h  proto_utils.h  serial_communicate.h
include/fishbot/driver/: fishbot_config.h  fishbot_driver.h
include/fishbot/driver/algorithm/motion/: diff2_model.h  motion_model.h
include/fishbot/driver/app_protocol/: base_frame.h  data_frame.h  frame.h  frame_buffer.h
include/fishbot/driver/app_protocol/data_frames/: base_data_frame.h  encoder_data_frame.h
include/fishbot/driver/app_protocol/proto/: proto_define.h  proto_v1.0.0.20220621.h  proto_v1.0.0.20220806.h
include/fishbot/driver/modules/: device.h
include/fishbot/driver/modules/motor/: motor.h
include/fishbot/driver/protocol/: base_protocol.h  protocol_define.h  serial_protocol.h  udp_server_protocol.h
include/fishbot/driver/python_wrapper/: fishbot_driver_python.h
include/fishbot/driver/utils/: proto_utils.h
include/fishbot/sdk/app_protocol/: base_frame.h  proto_v1.0.0.20220621.h
include/fishbot/sdk/protocol/: base_protocol.h  protocol_define.h  serial_protocol.h
include/fishbot/sdk/utils/: proto_utils.h
src/: fishbot_driver.cpp  fishbot_driver_test.cpp  main.cpp  test_main.cpp
src/algorithm/motion/: diff2_model.cpp
src/app_protocol/: base_frame.cpp  base_frame_test.cpp  data_frame.cpp  data_frame_test.cpp  frame.cpp  frame_buffer.cpp  frame_buffer_test.cpp  frame_test.cpp
src/app_protocol/data_frames/: base_data_frame.cpp  base_data_frame_test.cpp
src/communicate/: proto_utils.cpp
src/modules/: device.cpp  motor.cpp
src/protocol/: base_protocol.cpp  serial_protocol.cpp  serial_protocol_test.cpp  udp_server_protocol.cpp  udp_server_protocol_test.cpp
src/python_wrapper/: fishbot_driver_python.cpp
src/utils/: proto_utils.cpp
tests/: algorithm_motion_diff2_model_test.cpp  data_frame_test.cpp  fishbot_driver_test.cpp  frame_buffer_test.cpp  frame_test.cpp  serial_protocol_test.cpp  udp_server_protocol_test.cpp
tests/python_wrapper/: test_config_proto_mode.py  test_config_wifi.py
